security/network_policies/accounts-api/main/allow.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-main
  namespace: main
spec:
  podSelector:
    matchLabels:
      app: accounts-api
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
  egress:
  - to:  
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: ingress-nginx
        podSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: db
        podSelector:
          matchLabels:
            app.kubernetes.io/name: postgresql
      - namespaceSelector:
         matchLabels:
          kubernetes.io/metadata.name: kube-system
        podSelector:
         matchLabels:
          k8s-app: kube-dns
      # durch ip block ersetzen im techn. Artefakt
     #- namespaceSelector:
     #     matchLabels:
     #       kubernetes.io/metadata.name: keycloak
     #  podSelector:
     #     matchLabels:
     #       app: kc
      - ipBlock:
          cidr: 192.168.56.106/32
