security/network_policies/accounts-api/main/deny.yml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-traffic
  namespace: main
spec:
  podSelector:
    matchLabels:
      app: accounts-api
  policyTypes:
  - Ingress
  - Egress
